--- a/css/imports/home.css
+++ b/css/imports/home.css
@@ -1,5 +1,5 @@
 #myVideo {
-  position: fixed;
+  position: absolute;
   right: 0;
   bottom: 0;
   min-width: 100%;
@@ -8,20 +8,19 @@
 }
 
 .content {
-  position: fixed;
+  position: relative;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(21, 21, 21,.35);
   color: #f1f1f1;
   width: 100%;
   height: 100%;
   padding: 4.5rem;
-  z-index: 0;
 }
 .page canvas {
   max-width: 100%;
   max-height: 100%;
-  position: fixed;
-  z-index: 1;
+  position: absolute;
+  z-index: 2;
 }
 
 .content img{
