--- a/css/master.css
+++ b/css/master.css
@@ -1,4 +1,5 @@
 @import "./imports/fonts.css";
 @import "./imports/reset.css";
 @import "./imports/menu.css";
+@import "./imports/page.css";
 @import "./imports/home.css";
