--- a/css/imports/nosotros.css
+++ b/css/imports/nosotros.css
@@ -71,3 +71,22 @@
     -webkit-text-stroke: .1rem #00bef7;
     -webkit-text-fill-color: transparent;
 }
+
+.navigation button{
+    margin: 1rem;
+    width: 25%;
+    padding: 1rem;
+    background-color: transparent;
+    border-style: solid;
+    border-width: 5px;
+    border-image-slice: 1;
+    border-image-source: linear-gradient(to right, rgba(0, 190, 250, .75), rgba(0,50,110,0));
+    color: rgba(0, 190, 250);
+    text-align: left;
+    font-size: 1rem;
+    text-transform: uppercase;
+}
+.navigation button i{
+    margin-left: 1rem;
+    text-shadow: 0rem 0rem 1rem rgb(0, 200, 200);
+}
