--- a/css/master.css
+++ b/css/master.css
@@ -6,3 +6,4 @@
 @import "./imports/nosotros.css";
 @import "./imports/manifiest.css";
 @import "./imports/team.css";
+@import "./imports/service.css";
