--- a/css/imports/team.css
+++ b/css/imports/team.css
@@ -1,8 +1,13 @@
+#integrantes{
+    background-image: radial-gradient(circle, rgba(150,150,150,1) 0%, rgba(0,17,28,1) 80%);
+    justify-content: space-around;
+}
+
+
 .flip-card {
     background-color: transparent;
-    width: 300px;
-    height: 200px;
-    border: 1px solid #f1f1f1;
+    width: 20vw;
+    height: 20vw;
     perspective: 1000px;
     /* Remove this if you don't want the 3D effect */
 }
@@ -31,17 +36,36 @@
     -webkit-backface-visibility: hidden;
     /* Safari */
     backface-visibility: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
 }
 
 /* Style the front side (fallback if image is missing) */
 .flip-card-front {
-    background-color: #bbb;
-    color: black;
+    background-color: rgba(250, 250, 250, 1);
 }
 
 /* Style the back side */
 .flip-card-back {
-    background-color: dodgerblue;
-    color: white;
     transform: rotateY(180deg);
+    flex-direction: column;
+}
+
+.flip-card:nth-child(1) .flip-card-back{
+    background-color: #00ADFF;
+    color: snow;
+}
+.flip-card:nth-child(2) .flip-card-back{
+    background-color: #D4674F;
+    color: snow;
+}
+.flip-card:nth-child(3) .flip-card-back{
+    background-color: #00BA43;
+    color: snow;
+}
+.flip-card:nth-child(4) .flip-card-back{
+    background-color: #623891;
+    color: snow;
 }
